--- a/src/app/dashboard/components/markets/markets-item/markets-item.component.html
+++ b/src/app/dashboard/components/markets/markets-item/markets-item.component.html
@@ -4,7 +4,7 @@
     [ngClass]="{
     'widget__table-row--green': isChangePositive(pair),
     'widget__table-row--red': !isChangePositive(pair),
-    'markets__selected-pair': pair.currencyPairId === currentCurrencyPair.currencyPairId}"
+    'markets__selected-pair': pair.currencyPairId === currentCurrencyPair?.currencyPairId}"
     [attr.data-marketItem]="pair.currencyPairId"
   >
     <div
