--- a/src/assets/scss/components/_dropdown.scss
+++ b/src/assets/scss/components/_dropdown.scss
@@ -236,3 +236,7 @@ app-dynamic-input-dashboard  perfect-scrollbar > .ps.ps--active-y > .ps__rail-y{
   color: #191A39;
   background: none;
 }
+.select__list-item:not(.active):hover{
+  color: #191A39;
+  background: none;
+}
