--- a/src/app/popups/login-popup-mobile/login-popup-mobile.component.html
+++ b/src/app/popups/login-popup-mobile/login-popup-mobile.component.html
@@ -98,8 +98,8 @@
     </ng-template>
 
     <ng-template #captchaTemplate>
-      <h6 class="popup__title">{{'Enter the captcha' | translate}}</h6>
-      <re-captcha (resolved)="afterResolvedCaptcha($event)" [siteKey]="recaptchaKey"></re-captcha>
+      <h6 class="popup__title popup_title--dm">{{'Enter the captcha' | translate}}</h6>
+      <re-captcha data-size="compact" (resolved)="afterResolvedCaptcha($event)" [siteKey]="recaptchaKey"></re-captcha>
       <!--<div class="popup__links-wrap  popup__links-wrap&#45;&#45;center">-->
         <!--<a class="popup__link" (click)="openRegistration()">Go to registration form</a>-->
       <!--</div>-->
