--- a/src/app/dashboard/components/graph/graph.component.html
+++ b/src/app/dashboard/components/graph/graph.component.html
@@ -109,7 +109,7 @@
       <!-- <div class="amcharts-stock_chart_div" id="tv_chart_container"></div> -->
       <div class="widget__buy-sell-btn-wrap">
         <a href="#" class="btn btn--active widget__trading-btn widget__trading-btn--buy">Buy BTC</a>
-        <a href="#" class="btn btn--active widget__trading-btn widget__trading-btn--sell" (click)="onSubmit(SELL)">Sell BTC</a>
+        <a href="#" class="btn btn--active widget__trading-btn widget__trading-btn--sell" >Sell BTC</a> <!-- (click)="onSubmit(SELL)" -->
       </div>
     </div>
   </div>
@@ -117,9 +117,9 @@
 </div>
 
 <div class="currency-search-container" *ngIf="showCurrencySearch">
-<app-currency-search
+<!-- <app-currency-search
   [currencies]="currencies"
   (closeCurrencySearch)="toggleCurrencySearch()"
   (selectCurrency)="onSelectCurrency($event)">
-</app-currency-search>
+</app-currency-search> -->
 </div>
