--- a/src/app/dashboard/components/trading/trading.component.html
+++ b/src/app/dashboard/components/trading/trading.component.html
@@ -49,7 +49,7 @@
             <span>{{'Fee:' | translate}} {{buyOrder.commission | roundCurrency:arrPairName[1] | formatCurrency | exponentToNumber}} {{arrPairName[1]}}</span>
           </div>
         </div>
-        
+
         <div class="row row--jcsb widget__trading-row  input-row">
           <div class="wrap-input widget__input no-line">
             <app-price-input [placeholder]="translateService.instant('Quantity')" [currencyName]="arrPairName[0]" [currencyLabel]="arrPairName[0]" [forTrading]="true" (customInput)="quantityInput($event, BUY)" name="quantity" formControlName="quantity"></app-price-input>
@@ -109,7 +109,7 @@
             <span>{{'Fee:' | translate}} {{sellOrder.commission | roundCurrency:arrPairName[1] | formatCurrency | exponentToNumber}} {{arrPairName[1]}}</span>
           </div>
         </div>
-        
+
         <div class="row row--jcsb widget__trading-row input-row">
           <div class="wrap-input widget__input no-line">
             <app-price-input [placeholder]="translateService.instant('Quantity')" [currencyName]="arrPairName[0]" [currencyLabel]="arrPairName[0]" [forTrading]="true" (customInput)="quantityInput($event, SELL)" name="quantity" formControlName="quantity"></app-price-input>
@@ -167,7 +167,9 @@
 
 <!-- trading mobile start -->
   <div class="widget__content widget__content--mob">
-    <div class="trading-header-wr">
+    <!-- app-currency-pair-info-mobile  start-->
+    <app-currency-pair-info-mobile></app-currency-pair-info-mobile>
+    <!-- <div class="trading-header-wr">
       <div class="currency-pair-info--mob">
         <div class="currency-pair-info__inner">
           <div class="currency-pair-info__pair">
@@ -190,7 +192,8 @@
         </div>
         </div>
       </div>
-    </div>
+    </div> -->
+    <!-- app-currency-pair-info-mobile  end-->
       <div class="order-book-wr">
         <div class="order-book-part order-book-buy">
           <div class="table">
@@ -203,21 +206,21 @@
                 <div class="td">1</div>
                 <div class="td">0.1597</div>
                 <div class="td">3536.20</div>
-                <div class="bg-bar" style="width:13%;"></div> 
+                <div class="bg-bar" style="width:13%;"></div>
               </div>
               <div class="tr">
                 <div class="td">2</div>
                 <div class="td">0.1597</div>
                 <div class="td">3536.20</div>
-                <div class="bg-bar" style="width:20%;"></div> 
+                <div class="bg-bar" style="width:20%;"></div>
               </div>
               <div class="tr">
                 <div class="td">3</div>
                 <div class="td">0.1597</div>
                 <div class="td">3536.20</div>
-                <div class="bg-bar" style="width:24%;"></div> 
+                <div class="bg-bar" style="width:24%;"></div>
               </div>
-              <div class="tr"> 
+              <div class="tr">
                 <div class="td">4</div>
                 <div class="td">0.1597</div>
                 <div class="td">3536.20</div>
@@ -227,7 +230,7 @@
                 <div class="td">5</div>
                 <div class="td">0.1597</div>
                 <div class="td">3536.20</div>
-                <div class="bg-bar" style="width:56%;"></div> 
+                <div class="bg-bar" style="width:56%;"></div>
               </div>
           </div>
         </div>
@@ -238,38 +241,38 @@
                 <div class="td">Amount</div>
                 <div class="td">Sell</div>
               </div>
-            
+
               <div class="tr">
                 <div class="td">3536.20</div>
                 <div class="td">0.1597</div>
                 <div class="td">1</div>
-                <div class="bg-bar" style="width:25%;"></div> 
+                <div class="bg-bar" style="width:25%;"></div>
               </div>
               <div class="tr">
                 <div class="td">3536.20</div>
                 <div class="td">0.1597</div>
                 <div class="td">2</div>
-                <div class="bg-bar" style="width:25%;"></div> 
+                <div class="bg-bar" style="width:25%;"></div>
               </div>
               <div class="tr">
                 <div class="td">3536.20</div>
                 <div class="td">0.1597</div>
                 <div class="td">3</div>
-                <div class="bg-bar" style="width:25%;"></div> 
+                <div class="bg-bar" style="width:25%;"></div>
               </div>
               <div class="tr">
                 <div class="td">3536.20</div>
                 <div class="td">0.1597</div>
                 <div class="td">4</div>
-                <div class="bg-bar" style="width:25%;"></div> 
+                <div class="bg-bar" style="width:25%;"></div>
               </div>
               <div class="tr">
                 <div class="td">3536.20</div>
                 <div class="td">0.1597</div>
                 <div class="td">5</div>
-                <div class="bg-bar" style="width:25%;"></div> 
+                <div class="bg-bar" style="width:25%;"></div>
               </div>
-          </div> 
+          </div>
           </div>
       </div>
       <div class="trading-wr--mobile">
@@ -301,7 +304,7 @@
             <span>{{'Fee:' | translate}} {{buyOrder.commission | roundCurrency:arrPairName[1] | formatCurrency | exponentToNumber}} {{arrPairName[1]}}</span>
           </div>
         </div>
-        
+
         <div class="row row--jcsb widget__trading-row  input-row">
           <div class="wrap-input widget__input no-line">
             <app-price-input [placeholder]="translateService.instant('Quantity')" [currencyName]="arrPairName[0]" [currencyLabel]="arrPairName[0]" [forTrading]="true" (customInput)="quantityInput($event, BUY)" name="quantity" formControlName="quantity"></app-price-input>
@@ -361,7 +364,7 @@
             <span>{{'Fee:' | translate}} {{sellOrder.commission | roundCurrency:arrPairName[1] | formatCurrency | exponentToNumber}} {{arrPairName[1]}}</span>
           </div>
         </div>
-        
+
         <div class="row row--jcsb widget__trading-row input-row">
           <div class="wrap-input widget__input no-line">
             <app-price-input [placeholder]="translateService.instant('Quantity')" [currencyName]="arrPairName[0]" [currencyLabel]="arrPairName[0]" [forTrading]="true" (customInput)="quantityInput($event, SELL)" name="quantity" formControlName="quantity"></app-price-input>
@@ -416,7 +419,7 @@
     </div>
 
       </div>
-      
+
 <!-- trading mobile end -->
   </div>
   <!--notif success start-->
