--- a/src/app/dashboard/components/markets/markets.component.html
+++ b/src/app/dashboard/components/markets/markets.component.html
@@ -220,7 +220,7 @@
                  [ngClass]="{
                  'widget__table-row--green': isChangePositive(pair),
                   'widget__table-row--red': !isChangePositive(pair),
-                  'markets__selected-pair': pair.currencyPairId === currentCurrencyPair.currencyPairId
+                  'markets__selected-pair': pair.currencyPairId === currentCurrencyPair?.currencyPairId
                   }">
               <div class="table__cell table__cell--p4 table__cell--tac" style="width: 20%;  display: flex; align-items: center; justify-content: center;">
                   <span class="table__row-star" [ngClass]="{'table__row-star--select': isFavorite(pair)}"
