--- a/src/app/popups/recovery-pass/recovery-pass.component.scss
+++ b/src/app/popups/recovery-pass/recovery-pass.component.scss
@@ -8,6 +8,124 @@ re-captcha{
 
 .wrap-input__message {
   color: #EB5757 !important;
-  position: absolute;
+  // position: absolute;
   top: 45px;
+}
+@media(max-width: 992px){
+	.accept-icon {
+    display: none;
+}
+	.logo-login-mob{
+		display: block;
+		margin-bottom: 10px;
+		img{
+			display: block;
+		}
+	}
+	.popup__title{
+		display: none;
+	}
+
+	.popup__title-mob{
+		display: block;
+		font-weight: 400;
+		line-height: 1;
+		font-size: 24px;
+		color: #DEDEFB;
+		    margin-bottom: 65px;
+	}
+	.popup {
+		.wrap-input--error{
+				.wrap-input__input{
+					color: #fff;
+				}
+			}
+		.wrap-input__input{
+			&:focus {
+				&~ .wrap-input__label{
+					background: #191A39;
+				}
+			}
+		}
+		background: #191A39;
+		padding: 27px;	
+		padding-bottom: 29px;
+		border-radius: 0;
+		.wrap-input__input:valid{
+			&~ .wrap-input__label{
+				background: #191A39;
+			}
+		}
+	}
+	.wrap-input__input{
+		color: #DEDEFB;
+		margin: 0;
+	}
+	.popup__form{
+		max-width: 320px;
+	}
+	.popup__btn{
+		max-width: unset;
+		margin-top: 18px;
+	}
+	.popup__link-text--mob{
+		
+		color: #576E9C;
+	}
+	.agree-terms{
+color: #576E9C;
+    font-size: 14px;
+	}
+	.popup__links-wrap{
+		justify-content: flex-start;
+		font-weight: 400;
+		    margin: 32px auto 0;
+    letter-spacing: .1px;
+	}
+	.popup__link{
+		font-size: 14px;
+		margin-left: 0;
+		// display: none;
+	}
+	.popup__link--mob{
+		font-size: 14px;
+		    margin-left: 3px;
+		display: flex;
+		justify-content: flex-start;
+	}
+	.popup__wrap-input{
+		margin-bottom: 10px;
+	}
+	.popup__link-mob{
+		position: absolute;
+		bottom: 38px;
+		left: 27px;
+		right: 27px;
+		display: block;
+		width: 100%;
+		height: auto;
+		text-decoration: none;
+		background-color: unset;
+		color: #237BEF;
+		font-weight: 500;
+		span{
+			margin-right: 2px;
+			color: #576E9C;
+			letter-spacing: -0.1px;
+    word-spacing: 1px;
+		}
+	}
+	.popup__close{
+		top: 23px;
+		right: 19px;
+		width: 17px;
+		height: 17px;
+	}
+	.popup_title--dm{
+		display: block;
+		color: #DEDEFB;
+	}
+	.wrap-input__label{
+		background: #191A39;
+	}
 }
