--- a/src/assets/scss/components/_hints.scss
+++ b/src/assets/scss/components/_hints.scss
@@ -35,3 +35,17 @@
 	pointer-events:auto;
 	}
 }
+
+.wrap-input__input--error,.ng-invalid.ng-touched{
+	&~div .input-hint-wrapper{
+		opacity: 1;
+	pointer-events:auto;
+	}
+}
+.wrap-input--error{
+	.input-hint-wrapper{
+		opacity: 1;
+	pointer-events:auto;
+	color: #EB5757;
+	}
+}
