--- a/src/app/orders/orders-history/orders-history.component.html
+++ b/src/app/orders/orders-history/orders-history.component.html
@@ -123,7 +123,7 @@
         <div class="row row--jcsb">
           <div class="wrap-input orders__datepicker filters-popup__datepicker">
             <label class="wrap-input__label" [ngClass]="{'select-input_label': modelDateFrom?.date}" >{{'From' | translate}}</label>
-
+            <app-date-mask-input [innValue]="modelDateFrom" (validDate)="dateFromChanged($event)"></app-date-mask-input>
             <my-date-picker
               name="from"
               [options]="myDatePickerOptions"
@@ -136,7 +136,7 @@
           </div>
           <div class="wrap-input orders__datepicker input-el filters-popup__datepicker">
             <label class="wrap-input__label" [ngClass]="{'select-input_label': modelDateTo?.date}" >{{'To' | translate}}</label>
-
+            <app-date-mask-input [innValue]="modelDateTo" (validDate)="dateToChanged($event)"></app-date-mask-input>
             <my-date-picker
               name="to"
               [options]="myDatePickerOptions"
@@ -188,7 +188,7 @@
         </div>
         <div class="wrap-input orders__datepicker">
           <label class="wrap-input__label" [ngClass]="{'select-input_label': modelDateFrom?.date}">{{'From' | translate}}</label>
-
+          <app-date-mask-input [innValue]="modelDateFrom" (validDate)="dateFromChanged($event)"></app-date-mask-input>
           <my-date-picker
             name="history-from"
             [options]="myDatePickerOptions"
@@ -201,7 +201,7 @@
         </div>
         <div class="wrap-input orders__datepicker ">
           <label class="wrap-input__label" [ngClass]="{'select-input_label': modelDateTo?.date}">{{'To' | translate}}</label>
-
+          <app-date-mask-input [innValue]="modelDateTo" (validDate)="dateToChanged($event)"></app-date-mask-input>
           <my-date-picker
             name="history-to"
             [options]="myDatePickerOptions"
