--- a/src/app/orders/orders-history/orders-history.component.scss
+++ b/src/app/orders/orders-history/orders-history.component.scss
@@ -135,3 +135,14 @@ a.active {
   display: block !important;
 }
 
+// TEMP STYLE
+
+::ng-deep .mydp{
+  display: flex !important;
+  .selectiongroup{
+    margin-left: auto !important;
+    .selbtngroup {
+      width: auto !important;
+    }
+  }
+}
