--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -56,7 +56,7 @@
         </li> -->
       </ul>
     </div>
-    <div style="width:100%">
+    <div class="settings-content-wr">
       <router-outlet></router-outlet>
     </div>
   </div>
