--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -565,6 +565,10 @@
     height: calc(100% - 60px);
     overflow-y: scroll;
     overflow-x: hidden;
+    @media(max-width: 1200px){
+      height: calc(100% - 46px);
+
+    }
   }
 
   &__inner {
