--- a/src/assets/scss/components/_header.scss
+++ b/src/assets/scss/components/_header.scss
@@ -369,6 +369,9 @@
     height: calc(100% - 60px);
     overflow-y: scroll;
     overflow-x: hidden;
+    // @media(max-width: 1200px){
+      height: calc(100% - 46px);
+    // }
   }
   &__inner{
     display: -webkit-flex;
