--- a/src/assets/scss/components/_service-style.scss
+++ b/src/assets/scss/components/_service-style.scss
@@ -7,6 +7,12 @@
 		display: none;
 	}
 }
+.mobile-content{
+	display: none;
+	@media(max-width: 992px){
+		display: block;
+	}
+}
 
 .mobile-container{
 	@media(max-width: 992px){
@@ -16,3 +22,8 @@
 		width: 100%;
 	}
 }	
+@media(max-width: 1200px){
+.content{
+padding-bottom: 46px;
+}
+}
