--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,6 +32,10 @@
       padding-right: 20px;
       height: 3em;
       overflow: hidden;
+
+    }
+    .banner-wr p {
+      margin: 0;
     }
 
     .banner-wr .banner-content-inner:nth-child(1){
