--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -3,7 +3,7 @@ $green: #00B43D;
 $white:#F6F6F6;
 $darker-white: #ECECEC;
 $light-grey:#BFBFBF;
-$grey:#A0A0A0;
+$grey:#94C2FF;
 $dark-grey:#4B4B4B;
 $light-aqua:#E9F2FF;
 $light-blue:#94C2FF;
