--- a/src/app/popups/password-changed-popup/password-changed-popup.component.scss
+++ b/src/app/popups/password-changed-popup/password-changed-popup.component.scss
@@ -1,7 +1,8 @@
 .popup-demo{
   padding: 28px 16px;
   min-height: auto;
-  background-color: #fff;
+  
+  background: #191A39;
   border: 1px solid #fff;
   .text{
     font-size: 14px;
@@ -9,7 +10,8 @@
     text-align: center;
     max-width: 580px;
     margin: 16px auto 0;
-    color: #4B4B4B;
+    color: #DEDEFB;
+
   }
   .btn{
     margin-top: 24px;
@@ -20,8 +22,12 @@
 @media (min-width:1200px) {
   .popup-demo{
     max-width: 536px;
+    background-color: #fff;
     .btn{
       margin-top: 12px;
+    }
+    .text{
+      color: #4B4B4B;
     }
   }
 }
