--- a/src/assets/scss/components/_hints.scss
+++ b/src/assets/scss/components/_hints.scss
@@ -33,15 +33,13 @@
 	&~div .input-hint-wrapper{
 		opacity: 1;
 	pointer-events:auto;
+
+	span{
+		color: #EB5757;
+	}
 	}
 }
 
-.wrap-input__input--error,.ng-invalid.ng-touched{
-	&~div .input-hint-wrapper{
-		opacity: 1;
-	pointer-events:auto;
-	}
-}
 .wrap-input--error{
 	.input-hint-wrapper{
 		opacity: 1;
