--- a/src/assets/scss/components/_modal.scss
+++ b/src/assets/scss/components/_modal.scss
@@ -188,6 +188,9 @@
     h6 {
       font-size: 24px;
       margin-bottom: 12px;
+      @media(max-width:1200px){
+        color: #DEDEFB;
+      }
     }
 
     span {
@@ -542,6 +545,9 @@
           ~ .wrap-input__label {
             color: $red;
             background-color: #fff;
+            @media(max-width: 1200px){
+              background-color: #191A39;
+            }
           }
 
           ~ .wrap-input__line {
@@ -573,6 +579,9 @@
             ~ .wrap-input__label {
               color: $darker-blue;
               background-color: #fff;
+              @media(max-width: 1200px){
+                background-color: #191A39;
+              }
             }
 
             ~ .wrap-input__line {
@@ -620,13 +629,19 @@
         border-color: $grey;
         background-color: transparent;
         color:#000;
-
+        @media(max-width: 1200px){
+              background-color: #191A39;
+              color: #DEDEFB;
+            }
         &:focus {
           border-color: $darker-blue;
 
           ~ .wrap-input__label {
             color: $darker-blue !important;
             background-color: #fff;
+            @media(max-width: 1200px){
+              background-color: #191A39;
+            }
           }
 
           ~ .wrap-input__icon {
@@ -648,6 +663,9 @@
           ~ .wrap-input__label {
             color: $grey;
             background-color: #fff;
+            @media(max-width: 1200px){
+              background-color: #191A39;
+            }
           }
         }
 
@@ -669,6 +687,9 @@
           ~ .select__label {
             color: $darker-blue;
             background-color: #fff;
+            @media(max-width: 1200px){
+              background-color: #191A39;
+            }
           }
           ~ .select__line {
             background-color: $darker-blue;
@@ -795,7 +816,7 @@
         color: #DEDEFB;
       }
       .subtitle{
-        color: #DEDEFB;
+        color: #94C2FF;
       }
       .modal__header{
         border-bottom: 1px solid #94C2FF;
@@ -822,8 +843,9 @@
         min-width: unset;
       }
       .title{
-        font-size: 22px;
-        line-height: 24px;
+        font-size: 20px;
+        line-height: 22px;
+
       }
     }
   }
