--- a/src/assets/scss/components/_title.scss
+++ b/src/assets/scss/components/_title.scss
@@ -1,6 +1,7 @@
 .title{
   font-size: 24px;
   line-height: 28px;
+
   color: $dark-indigo;
   text-align: center;
 
@@ -22,7 +23,12 @@
 /*--- DARK THEME START---*/
 .dark-theme{
   .title{
-    color:#fff;
+    color: #DEDEFB;
+    @media (max-width: 568px){
+      font-size: 20px;
+      line-height: 22px;
+      color: #DEDEFB;
+  }
   }
 }
 @media (min-width:1200px) {
