add filter on select currency/currencyPair

--- a/src/app/orders/orders-history/orders-history.component.html
+++ b/src/app/orders/orders-history/orders-history.component.html
@@ -182,6 +182,7 @@
             [value]="currencyPairValue"
             [options]="(currencyPairs$ | async) | dynamicIData: 'name': 'id'"
             (onChange)="onChangeCurrPair($event)"
+            (onSelect)="onSelectPair($event)"
           >
           </app-dynamic-input>
           <div class="wrap-input__line"></div>
