--- a/src/app/dashboard/components/graph/graph.component.html
+++ b/src/app/dashboard/components/graph/graph.component.html
@@ -1,6 +1,6 @@
 <div class="widget widget--graph-color">
   <div class="widget__header panel-heading">
-    <span class="widget__name">{{'Graph' | translate}} <span>{{firstCurrency}} / {{secondCurrency}}</span></span>
+    <span class="widget__name">{{'Graph' | translate}} <span>{{pair.currencyPairName}}</span></span>
     <a href="#" class="widget__question">
       <span class="widget__question-img">
         <svg width="8" height="13" viewBox="0 0 8 13" fill="none" xmlns="http://www.w3.org/2000/svg">
