registration, fix mobile, orders cancel All

--- a/src/app/dashboard/components/currency-pair-info-mobile/currency-pair-info-mobile.component.html
+++ b/src/app/dashboard/components/currency-pair-info-mobile/currency-pair-info-mobile.component.html
@@ -13,6 +13,7 @@
         </div>
       </div> -->
       <app-dynamic-input-dashboard
+        class = "curency-input"
         [value]="pairInput"
         [options]="DIOptions"
         (onChange)="onChangeCurrPair($event)"
