--- a/src/app/popups/login-popup-mobile/login-popup-mobile.component.scss
+++ b/src/app/popups/login-popup-mobile/login-popup-mobile.component.scss
@@ -65,8 +65,9 @@ re-captcha{
 		}
 	}
 	.wrap-input__input{
-		color: #DEDEFB;
+		color: rgba(148, 194, 255, .5);
 		margin: 0;
+		border-color: rgba(148, 194, 255, .5);
 	}
 	.popup__form{
 		max-width: 320px;
@@ -74,6 +75,11 @@ re-captcha{
 	.popup__btn{
 		max-width: unset;
 		margin-top: 18px;
+		    color: #237BEF;
+    border-color: #237BEF;
+    &.popup__btn--active{
+    	color: #fff;
+    }
 	}
 	.popup__links-wrap{
 		justify-content: flex-start;
@@ -115,5 +121,9 @@ re-captcha{
 	}
 	.wrap-input__label{
 		background: #191A39;
+		color: rgba(148, 194, 255, .5);
+	}
+	.wrap-input__show-password{
+		opacity: .5;
 	}
 }
