--- a/src/app/orders/open-orders/open-orders.component.html
+++ b/src/app/orders/open-orders/open-orders.component.html
@@ -179,7 +179,7 @@
     </div>
     <form action="">
       <div class="row orders__filters">
-        <div>
+        <div class="orders__filters--wr">
 
           <app-dynamic-input
             [value]="currencyPairValue"
@@ -190,6 +190,11 @@
           >
           </app-dynamic-input>
           <div class="wrap-input__line"></div>
+          <div class="cancel-btn-wr">
+            <button class="cancel-btn btn">
+              <span>Cancel all</span>
+            </button>
+          </div>
         </div>
         <!--<div class="wrap-input orders__datepicker">-->
           <!--<label class="wrap-input__label" [ngClass]="{'select-input_label': modelDateFrom?.date}" >From</label>-->
