--- a/src/app/orders/open-orders/open-orders.component.scss
+++ b/src/app/orders/open-orders/open-orders.component.scss
@@ -107,3 +107,26 @@
   text-align: center;
   font-size: 18px;
 }
+.cancel-btn-wr {
+  max-width: 185px;
+    width: 100%;
+        
+}
+
+.cancel-btn-wr .cancel-btn{
+  border-color: #94C2FF;
+        color:  #94C2FF;
+        background: transparent;
+        &:hover{
+          color: #fff;
+    background-color: #237BEF;
+    border-color: #237BEF;
+        }
+
+}
+
+.orders__filters--wr {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
