--- a/src/app/shared/components/dynamic-input-dashboard/dynamic-input-dashboard.component.scss
+++ b/src/app/shared/components/dynamic-input-dashboard/dynamic-input-dashboard.component.scss
@@ -98,3 +98,8 @@
 // ::ng-deep .ps__rail-y {
 //   margin-right: 2px !important;
 // }
+// @media(max-width: 992px){
+//     .dynamic-input__wrap{
+//       margin: 0;
+//   }
+// }
