--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -2,7 +2,8 @@ $red: #EB5757;
 $green: #00B43D;
 $white:#F6F6F6;
 $darker-white: #ECECEC;
-$light-grey:#BFBFBF;
+$light-grey:#DEDEFB;
+// $light-grey:#BFBFBF;
 $grey:#94C2FF;
 $dark-grey:#4B4B4B;
 $light-aqua:#E9F2FF;
