--- a/src/assets/scss/components/_pair-popup.scss
+++ b/src/assets/scss/components/_pair-popup.scss
@@ -175,7 +175,7 @@
     }
     &__input{
       // width: 260px;
-      margin-right: 32px;
+      // margin-right: 32px;
       margin-bottom: 1px;
       .wrap-input__input{
         &:valid{
