all orders cancel confirmation

--- a/src/app/orders/open-orders/open-orders.component.html
+++ b/src/app/orders/open-orders/open-orders.component.html
@@ -195,6 +195,15 @@
               <span>Cancel all</span>
             </button>
           </div>
+          <div class="revoke-request">
+            <div class="revoke-request__title">Are you sure you want to cancel all orders?</div>
+            <div class="revoke-request__button-wrap">
+              <button class="btn btn--small">Yes</button>
+              <button class="btn btn--small">No</button>
+            </div>
+            <div _ngcontent-c19="" class="revoke-request__triangle">
+            </div>
+          </div>
         </div>
         <!--<div class="wrap-input orders__datepicker">-->
           <!--<label class="wrap-input__label" [ngClass]="{'select-input_label': modelDateFrom?.date}" >From</label>-->
